# dagster

./: .pre-commit-config.yaml  Makefile  justfile  pyproject.toml
.buildkite/buildkite-shared/: lints.py  pyproject.toml
.buildkite/buildkite-shared/buildkite_shared/: context.py  utils.py
.buildkite/buildkite-shared/buildkite_shared/step_builders/: command_step_builder.py  trigger_step_builder.py
.buildkite/dagster-buildkite/: pyproject.toml
.buildkite/hooks/: pre-command
.claude/: python_packages.md
docs/: .yarnrc.yml  pyproject.toml  tox.ini
docs/content/: _navigation.json
docs/docs/about/: contributing.md
docs/docs/migration/: dagster-plus-us-to-eu.md
docs/next/public/: objects.inv
docs/redirects/: deployment.json  guides.json
examples/airlift-federation-tutorial/: pyproject.toml  tox.ini
examples/airlift-migration-tutorial/: pyproject.toml  tox.ini
examples/airlift-mwaa-example/: pyproject.toml
examples/assets_dbt_python/: pyproject.toml  tox.ini
examples/assets_dynamic_partitions/: pyproject.toml
examples/assets_modern_data_stack/: pyproject.toml  tox.ini
examples/assets_pandas_pyspark/: pyproject.toml
examples/assets_pandas_type_metadata/: pyproject.toml
examples/assets_smoke_test/: pyproject.toml
examples/assets_smoke_test/assets_smoke_test_tests/: test_smoke_pure_python_assets.py
examples/deploy_docker/: pyproject.toml
examples/deploy_ecs/: pyproject.toml
examples/deploy_k8s/: pyproject.toml
examples/development_to_production/: pyproject.toml
examples/docs_projects/project_components_pdf_extraction/: pyproject.toml
examples/docs_projects/project_dspy/: pyproject.toml
examples/docs_snippets/: pyproject.toml  tox.ini
examples/docs_snippets/docs_snippets_tests/: conftest.py  test_integration_files_load.py
examples/experimental/assets_yaml_dsl/: pyproject.toml
examples/experimental/external_assets/: pyproject.toml
examples/experimental/sling_decorator/: pyproject.toml
examples/feature_graph_backed_assets/: pyproject.toml
examples/oss-metadata-to-plus/: pyproject.toml
examples/oss-metadata-to-plus/metadata_to_plus/: migrate_metadata_job.py
examples/project_analytics/: pyproject.toml
examples/project_fully_featured/: pyproject.toml
examples/project_multi_tenant/: pyproject.toml
examples/quickstart_etl/: pyproject.toml
examples/starlift-demo/: pyproject.toml  tox.ini
examples/tutorial_notebook_assets/: pyproject.toml
examples/use_case_repository/: pyproject.toml
examples/with_great_expectations/: pyproject.toml
examples/with_openai/: pyproject.toml
examples/with_pyspark/: pyproject.toml
examples/with_pyspark_emr/: pyproject.toml
examples/with_wandb/: pyproject.toml
helm/dagster/schema/: pyproject.toml
integration_tests/python_modules/dagster-k8s-test-infra/: pyproject.toml
integration_tests/test_suites/auto_materialize_perf_tests/: test_asset_daemon_perf.py
integration_tests/test_suites/backcompat-test-suite/: pyproject.toml
integration_tests/test_suites/celery-k8s-test-suite/: pyproject.toml
integration_tests/test_suites/daemon-test-suite/: pyproject.toml
integration_tests/test_suites/dagster-azure-live-tests/: pyproject.toml  tox.ini
integration_tests/test_suites/k8s-test-suite/: conftest.py  pyproject.toml  tox.ini
js_modules/: package.json
js_modules/ui-core/: client.json
pyright/alt-1/: requirements-pinned.txt  ty.yaml
pyright/master/: exclude.txt  include.txt  requirements-pinned.txt  requirements.txt  ty.yaml
python_modules/automation/: pyproject.toml
python_modules/dagit/: pyproject.toml
python_modules/dagster/: pyproject.toml
python_modules/dagster-graphql/: pyproject.toml
python_modules/dagster-pipes/: pyproject.toml
python_modules/dagster-test/: pyproject.toml
python_modules/dagster-test/dagster_test_tests/: test_toys.py
python_modules/dagster-webserver/: pyproject.toml
python_modules/dagster/dagster/: __init__.py
python_modules/dagster/dagster_tests/: conftest.py
python_modules/libraries/create-dagster/: pyproject.toml
python_modules/libraries/dagster-airbyte/: pyproject.toml  tox.ini
python_modules/libraries/dagster-airflow/: pyproject.toml
python_modules/libraries/dagster-airlift/: pyproject.toml  tox.ini
python_modules/libraries/dagster-aws/: pyproject.toml
python_modules/libraries/dagster-azure/: pyproject.toml
python_modules/libraries/dagster-celery/: pyproject.toml
python_modules/libraries/dagster-celery-docker/: pyproject.toml
python_modules/libraries/dagster-celery-k8s/: pyproject.toml
python_modules/libraries/dagster-census/: pyproject.toml
python_modules/libraries/dagster-clickhouse/: pyproject.toml
python_modules/libraries/dagster-clickhouse-pandas/: pyproject.toml
python_modules/libraries/dagster-clickhouse-polars/: pyproject.toml
python_modules/libraries/dagster-cloud-cli/: pyproject.toml
python_modules/libraries/dagster-dask/: pyproject.toml
python_modules/libraries/dagster-databricks/: pyproject.toml
python_modules/libraries/dagster-datadog/: pyproject.toml
python_modules/libraries/dagster-datahub/: pyproject.toml
python_modules/libraries/dagster-dbt/: pyproject.toml  tox.ini
python_modules/libraries/dagster-deltalake/: pyproject.toml
python_modules/libraries/dagster-deltalake-pandas/: pyproject.toml
python_modules/libraries/dagster-deltalake-polars/: pyproject.toml
python_modules/libraries/dagster-dg-cli/: README.md  pyproject.toml  tox.ini
python_modules/libraries/dagster-dg-core/: pyproject.toml
python_modules/libraries/dagster-dlt/: pyproject.toml
python_modules/libraries/dagster-docker/: pyproject.toml
python_modules/libraries/dagster-duckdb/: pyproject.toml
python_modules/libraries/dagster-duckdb-pandas/: pyproject.toml
python_modules/libraries/dagster-openai/: pyproject.toml
scripts/: auto_ignore_pyright_errors.py  check_schemas.py  create_dagster_package.py  gen_airbyte_classes.py  install_dev_python_modules.py  run-pyright.py  run-ty.py
ty/alt-1/: requirements-pinned.txt  requirements.txt
ty/master/: pyproject.toml  requirements-pinned.txt  ty.yaml
(+513 files in other folders)
