[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airlift-federation-tutorial"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-airlift[core]",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.dagster]
module_name = "airlift_federation_tutorial.definitions"

[tool.setuptools.packages.find]
