[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tutorial-example"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-airlift[core,in-airflow]",
    "dbt-duckdb",
    "pandas",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.dagster]
module_name = "tutorial_example.definitions"

[tool.setuptools.packages.find]
