[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mwaa-example"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-airlift[core,mwaa]",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
