[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "assets_dbt_python"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-cloud",
    "boto3",
    "dagster-dbt",
    "pandas",
    "numpy",
    "scipy",
    "dbt-core",
    "dbt-duckdb",
    "dagster-duckdb",
    "dagster-duckdb-pandas",
    # packaging v22 has build compatibility issues with dbt as of 2022-12-07
    "packaging<22.0",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]

[tool.dagster]
module_name = "assets_dbt_python.definitions"
code_location_name = "assets_dbt_python"

[dependency-groups]
test = [
    "dagster[test]",
    "dagster-pipes",
    "dagster-shared",
    "dagster-webserver",
    "dagster-pandas",
    "dagster-dbt",
    "dagster-duckdb",
    "dagster-duckdb-pandas",
]

[tool.uv]
# dagster-cloud (from PyPI) pins an exact released dagster version; without
# this override uv can't reconcile that pin with local dagster==1!0+dev.
override-dependencies = ["dagster==1!0+dev"]

[tool.uv.sources]
dagster = { path = "../../python_modules/dagster", editable = true }
dagster-pipes = { path = "../../python_modules/dagster-pipes", editable = true }
dagster-shared = { path = "../../python_modules/libraries/dagster-shared", editable = true }
dagster-webserver = { path = "../../python_modules/dagster-webserver", editable = true }
dagster-pandas = { path = "../../python_modules/libraries/dagster-pandas", editable = true }
dagster-dbt = { path = "../../python_modules/libraries/dagster-dbt", editable = true }
dagster-duckdb = { path = "../../python_modules/libraries/dagster-duckdb", editable = true }
dagster-duckdb-pandas = { path = "../../python_modules/libraries/dagster-duckdb-pandas", editable = true }
