[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assets_dynamic_partitions"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-duckdb-pandas",
    "requests",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]

[tool.dagster]
module_name = "assets_dynamic_partitions.definitions"
code_location_name = "assets_dynamic_partitions"

[tool.setuptools.packages.find]
exclude = ["assets_dynamic_partitions_tests*"]
