[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assets_pandas_pyspark"
version = "1!0+dev"
dependencies = [
    "dagster",
    "pandas",
    "pyspark<4",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]
test = ["pandas", "pyarrow; python_version < '3.9'", "pyspark<4"]

[tool.dagster]
module_name = "assets_pandas_pyspark.definitions"
code_location_name = "assets_pandas_pyspark"

[tool.setuptools.packages.find]
exclude = ["assets_pandas_pyspark_tests*"]
