[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assets_smoke_test"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-pandas",
    "dagster-dbt",
    "pandas",
    "dbt-snowflake",
    "dagster-snowflake",
    "dagster-snowflake-pandas",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]

[tool.dagster]
module_name = "assets_smoke_test.definitions"
code_location_name = "assets_smoke_test"

[tool.setuptools.packages.find]
exclude = ["assets_smoke_test_tests*"]

[tool.setuptools.package-data]
assets_smoke_test = ["dbt_project/*"]
