[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metadata_to_plus"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]

[tool.dagster]
module_name = "metadata_to_plus"

[tool.setuptools.packages.find]
exclude = ["metadata_to_plus_tests*"]
