[project]
name = "quickstart_etl"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-cloud",
    "boto3",
    "pandas",
    "matplotlib",
]

[dependency-groups]
dev = [
    "dagster-dg-cli>=1.11.11",
    "dagster-webserver",
    "pytest",
]
test = [
    "dagster[test]",
    "dagster-pipes",
    "dagster-shared",
]

[tool.uv]
# dagster-cloud (from PyPI) pins an exact released dagster version; without
# this override uv can't reconcile that pin with the local
# dagster==1!0+dev source.
override-dependencies = ["dagster==1!0+dev"]

[tool.uv.sources]
dagster = { path = "../../python_modules/dagster", editable = true }
dagster-pipes = { path = "../../python_modules/dagster-pipes", editable = true }
dagster-shared = { path = "../../python_modules/libraries/dagster-shared", editable = true }
dagster-dg-cli = { path = "../../python_modules/libraries/dagster-dg-cli", editable = true }
dagster-webserver = { path = "../../python_modules/dagster-webserver", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "quickstart_etl.definitions"
code_location_name = "quickstart_etl"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "quickstart_etl"
