[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tutorial_notebook_assets"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagstermill",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]

[tool.setuptools.packages.find]
exclude = ["tutorial_notebook_assets*"]
