[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "use_case_repository"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-aws",
    "dagster-sling",
    "dagster-pipes",
    "dagster-snowflake",
    "flask",
    "markdown",
    "polars",
    "pymdown-extensions",
    "python-frontmatter",
    "sling",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest", "ruff"]

[tool.dagster]
module_name = "use_case_repository.definitions"
code_location_name = "use_case_repository"

[tool.setuptools.packages.find]
exclude = ["use_case_repository_tests*"]
