[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "with_great_expectations"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-ge",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]

[tool.dagster]
module_name = "with_great_expectations.definitions"
code_location_name = "with_great_expectations"

[tool.setuptools.packages.find]
exclude = ["with_great_expectations_tests*"]
