[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "with_pyspark_emr"
version = "1!0+dev"
dependencies = [
    "dagster",
    "dagster-aws",
    "dagster-pyspark",
]

[project.optional-dependencies]
dev = ["dagster-webserver", "pytest"]

[tool.dagster]
module_name = "with_pyspark_emr"

[tool.setuptools.packages.find]
exclude = ["with_pyspark_emr_tests*"]
