[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "external_assets"
version = "1!0+dev"
dependencies = [
    "dagster>=1.5.1",
    "dagster-k8s>=0.21.1",
]

[project.optional-dependencies]
dev = ["dagit", "pytest"]

[tool.setuptools.packages.find]
