[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "dagster-openai"
version = "1!0+dev"
description = "An OpenAI client resource for interacting with OpenAI API."
authors = [{name = "Dagster Labs", email = "hello@dagsterlabs.com"}]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "dagster==1!0+dev",
    "openai",
]

[project.urls]
Homepage = "https://github.com/dagster-io/dagster/tree/master/python_modules/libraries/dagster-openai"

[dependency-groups]
test = [
    "dagster[test]",
    "dagster-pipes",
    "dagster-shared",
]

[tool.uv.sources]
dagster = { path = "../../dagster", editable = true }
dagster-pipes = { path = "../../dagster-pipes", editable = true }
dagster-shared = { path = "../dagster-shared", editable = true }
